scaffolding on this day

--- a/src/App.css
+++ b/src/App.css
@@ -353,8 +353,7 @@ a.collapse {
   }
 }
 
-.MuiDateCalendar-root {
-  @media screen and (max-width: 600px) {
-    display: none;
-  }
+.MuiPaper-root {
+  margin: auto !important;
+  background: transparent !important;
 }
