--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ h3 {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 
     .horizontal {
       margin: 10px auto;
@@ -351,9 +351,4 @@ a.collapse {
   @media screen and (max-width: 600px) {
     width: auto;
   }
-}
-
-.MuiPaper-root {
-  margin: auto !important;
-  background: transparent !important;
 }
