--- a/src/App.css
+++ b/src/App.css
@@ -300,7 +300,7 @@ a.collapse {
 .MuiButtonGroup-root,
 .MuiInputBase-root,
 .MuiTextField-root {
-  margin: 10px auto 0;
+  margin: 30px auto 0;
   width: 100%;
   max-width: 430px;
   button {
@@ -354,14 +354,18 @@ a.collapse {
 }
 
 .skill-chart {
-  width: 450px !important;
-  transform: translate(28%, -30px);
+  margin: 0 auto;
+  width: 800px !important;
+  transform: translate(-50px, 0);
   @media screen and (max-width: 600px) {
     display: none !important;
   }
   cursor: pointer;
+  &.legend {
+    transform: translate(-300px, 0);
+  }
 }
 
 .MuiChartsLegend-root {
-  transform: translate(30%);
+  transform: translate(20px, 0);
 }
