--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
   font-family: "Gill Sans Extrabold", sans-serif;
   background-image: url("../public/desk.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
   line-height: 1.2;
   color: #141414;
 }
@@ -202,7 +203,6 @@ a.collapse {
     height: fit-content;
     border: none;
   }
-  margin: auto;
 
   .apod-nav {
     width: 100%;
@@ -246,7 +246,8 @@ a.collapse {
 }
 
 .epic {
-  margin: 20px 10px;
+  margin: 20px 10px 0;
+  text-align: center;
 }
 .ReactModal__Overlay,
 .ReactModal__Overlay--after-open {
@@ -294,7 +295,7 @@ a.collapse {
 .MuiButtonGroup-root,
 .MuiInputBase-root,
 .MuiTextField-root {
-  margin: 30px auto 0;
+  margin: 40px auto 0;
   width: 100%;
   max-width: 430px;
   button {
