--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,11 @@ h3 {
 }
 
 .App {
-  width: 100%;
-  margin-left: auto;
-  margin-top: 0;
-  min-height: 100vh;
-  max-width: 680px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -58,7 +58,6 @@ h3 {
   .logo {
     padding: 40px 50px 20px;
     text-align: right;
-
     img {
       width: 200px;
 
@@ -70,6 +69,7 @@ h3 {
     @media screen and (max-width: 600px) {
       width: 100%;
       background-color: rgba(10, 10, 10, 0.8);
+      margin-top: -20px;
     }
   }
 }
@@ -77,96 +77,49 @@ h3 {
 .App-content {
   display: flex;
   flex-direction: column;
-  margin: 20px;
-  section {
-    margin: 10px;
-    border-radius: 10px;
-    min-height: 500px;
+  width: 100%;
+  height: 600px;
+  justify-content: end;
+
+  .skill-chart {
+    margin-left: auto;
+    @media screen and (max-width: 600px) {
+      display: none !important;
+    }
+    @media screen and (max-width: 1000px) {
+      margin: auto;
+    }
+    cursor: pointer;
+  }
+  .legend2 {
+    @media screen and (max-width: 600px) {
+      display: none !important;
+    }
+    margin-left: auto;
   }
 
-  section.right {
-    display: flex;
-    flex-direction: column;
-    justify-content: end;
-    .MuiButtonGroup-root,
-    .MuiInputBase-root,
-    .MuiTextField-root {
-      margin: 40px auto 0;
-      width: 100%;
-      max-width: 430px;
-      button {
-        padding: 15px;
-        border-color: #808080 !important;
-        background-color: transparent !important;
-        color: #808080 !important;
-        &:first-child {
-          width: 100%;
-        }
-        font-size: 20px;
-        font-weight: 600;
-      }
-    }
-    .horizontal {
-      margin: 10px auto;
-      border-radius: 10px;
-      text-align: center;
-      cursor: pointer;
-      border: 1px solid #808080;
-      line-height: 0.8;
-
-      &:hover {
-        background-image: linear-gradient(#808080, #222222);
-        border: none;
-
-        * {
-          color: #e0e0e0;
-        }
-      }
-      &.desktop-only {
-        @media screen and (max-width: 800px) {
-          display: none;
-        }
-      }
-    }
-
-    .vertical {
-      display: flex;
-      margin: 10px 0;
-      h1 {
-        text-align: right;
+  .MuiButtonGroup-root,
+  .MuiInputBase-root,
+  .MuiTextField-root {
+    margin: 40px auto;
+    width: 100%;
+    max-width: 430px;
+    button {
+      padding: 15px;
+      border-color: #808080 !important;
+      background-color: transparent !important;
+      color: #808080 !important;
+      &:first-child {
         width: 100%;
-        color: #808080;
       }
-      @media screen and (max-width: 600px) {
-        /* flex-direction: column; */
-        display: none;
-      }
-
-      div {
-        background-image: linear-gradient(#808080, #222222, #141414);
-        width: 30%;
-        margin: 5px;
-        padding: 10px;
-        text-align: center;
-        border-radius: 10px;
-
-        @media screen and (max-width: 600px) {
-          width: 90%;
-          height: fit-content;
-          margin: 10px auto;
-          background-image: linear-gradient(#808080, #222222, #141414);
-        }
-      }
-
-      * {
-        color: #e0e0e0;
-      }
+      font-size: 20px;
+      font-weight: 600;
     }
   }
+}
 
-  h2 {
-    color: gray;
-  }
+h2 {
+  color: gray;
 }
 
 footer {
@@ -344,25 +297,5 @@ a.collapse {
   opacity: 0.8;
   @media screen and (max-width: 600px) {
     width: auto;
-  }
-}
-
-.skill-chart {
-  margin: 0 auto;
-  max-width: 800px !important;
-  transition-duration: 500ms;
-  transform: translate(-50px, 0);
-  @media screen and (max-width: 600px) {
-    display: none !important;
-  }
-  cursor: pointer;
-  &.legend {
-    transform: translate(-200px, 0);
-  }
-}
-
-.legend2 {
-  @media screen and (max-width: 600px) {
-    display: none !important;
   }
 }
