--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ h3 {
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
@@ -78,12 +78,10 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 600px;
-  justify-content: end;
-
+  margin: 0 auto;
+  justify-content: start;
+  align-items: end;
   .skill-chart {
-    width: 80%;
-    margin-left: auto;
     @media screen and (max-width: 600px) {
       display: none !important;
     }
@@ -96,13 +94,13 @@ h3 {
     @media screen and (max-width: 600px) {
       display: none !important;
     }
-    margin-left: auto;
+    margin-right: 0;
   }
 
   .MuiButtonGroup-root,
   .MuiInputBase-root,
   .MuiTextField-root {
-    margin: 40px auto;
+    margin: 40px 100px 0;
     width: 100%;
     max-width: 430px;
     button {
@@ -124,11 +122,10 @@ h2 {
 }
 
 footer {
-  color: #222222;
+  color: #808080;
   width: 100%;
   font-size: 12px;
   text-align: center;
-  height: 40px;
 }
 
 a,
