--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,9 @@ h3 {
 .App {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
 }
 
 .App-header {
@@ -79,11 +78,12 @@ h3 {
 .App-content {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   justify-content: start;
   align-items: end;
   .skill-chart {
+    margin-bottom: 20px;
     @media screen and (max-width: 600px) {
       display: none !important;
     }
@@ -102,7 +102,7 @@ h3 {
   .MuiButtonGroup-root,
   .MuiInputBase-root,
   .MuiTextField-root {
-    margin: 40px 100px 0;
+    margin: 40px 0;
     width: 100%;
     max-width: 430px;
     button {
@@ -128,6 +128,8 @@ footer {
   width: 100%;
   font-size: 12px;
   text-align: center;
+  position: fixed;
+  bottom: 0;
 }
 
 a,
