--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@ body {
   background-repeat: no-repeat;
   line-height: 1.2;
   color: #141414;
+  backdrop-filter: blur(10px);
+  width: 100vw;
+  height: 100vh;
 }
 
 ol,
@@ -30,8 +33,6 @@ h3 {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  width: 100vw;
-  height: 100vh;
 }
 
 .App-header {
@@ -79,8 +80,8 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 90%;
-  margin: 0 auto;
-  justify-content: start;
+  margin: 10px auto;
+  justify-content: center;
   align-items: end;
   .skill-chart {
     margin-bottom: 20px;
@@ -129,7 +130,7 @@ footer {
   font-size: 12px;
   text-align: center;
   position: fixed;
-  bottom: 0;
+  bottom: 20px;
 }
 
 a,
