--- a/src/App.css
+++ b/src/App.css
@@ -82,16 +82,18 @@ h3 {
   display: flex;
   flex-direction: column;
   width: 90%;
-  margin: 40px auto;
+  margin: auto auto;
   align-items: end;
+  height: 60vh;
+
   .skill-chart {
-    @media screen and (max-width: 840px) {
+    @media screen and (max-width: 940px) {
       display: none !important;
     }
     cursor: pointer;
   }
   .legend2 {
-    @media screen and (max-width: 840px) {
+    @media screen and (max-width: 940px) {
       display: none !important;
     }
     margin-right: 0;
