--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,8 @@ h3 {
     img,
     svg {
       height: 25px;
+      width: 25px;
       margin: -5px 20px;
-      width: fit-content;
     }
 
     @media screen and (max-width: 600px) {
