--- a/src/App.css
+++ b/src/App.css
@@ -128,8 +128,9 @@ footer {
   font-size: 12px;
   text-align: center;
   position: fixed;
-  bottom: 20px;
-  right: 40px;
+  bottom: 0;
+  padding: 10px;
+  right: 30px;
 }
 
 a,
