--- a/src/App.css
+++ b/src/App.css
@@ -214,6 +214,12 @@ a.collapse {
 
 .weather {
   margin-top: 20px;
+
+  small.label {
+    @media screen and (max-width: 600px) {
+      display: none !important;
+    }
+  }
 }
 
 .epic {
