--- a/src/App.css
+++ b/src/App.css
@@ -247,8 +247,8 @@ a.collapse {
 }
 
 .map-container {
-  height: 80%;
-  min-height: 600px;
+  height: 500px;
+  min-height: fit-content;
   cursor: pointer;
 }
 
