--- a/src/App.css
+++ b/src/App.css
@@ -203,6 +203,10 @@ a.collapse {
 .epic {
   margin: 5px auto;
   text-align: center;
+
+  .MuiTabs-list {
+    justify-content: space-evenly;
+  }
 }
 .ReactModal__Overlay,
 .ReactModal__Overlay--after-open {
