--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 20px;
   color: #808080;
 }
 h3 {
@@ -162,16 +162,18 @@ a.collapse {
     margin: 10px 0;
   }
   img {
-    width: 100%;
     border: none;
     margin-bottom: 10px;
+    max-height: 80vh;
+    max-width: 100vw;
   }
 
   iframe,
   video,
   embed {
-    width: 100%;
     min-height: 500px;
+    width: 900px;
+    max-width: 100vw;
     border: none;
   }
 
